[tool.poetry]
name = "speech"
version = "0.0.1"
description = ""
authors = ["Dmitrii Altukhov <dm.altukhov@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
mne = "^0.24.1"
setuptools = "^60.9.3"
pip = "^22.0.4"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
tqdm = "^4.63.0"
pandas = "^1.4.1"
scipy = "^1.6.1"
SoundFile = "^0.10.3"
tensorboard = "^2.8.0"
h5py = "^3.6.0"
colorednoise = "^2.0.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipython = "^8.1.1"
mypy = "^0.950"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
